--- a/Tutorial_Static_Analysis.ipynb
+++ b/Tutorial_Static_Analysis.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "if os.getcwd() not in sys.path:\n",
-    "    sys.path.append(os.getcwd())\n",
+    "    sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
     "\n",
     "from hhg.models import SSHModel\n",
     "from hhg.analysis import plot_band_structure, plot_wavefunction"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
